# json-log-inspector

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  PRD.md  README.md  devenv.nix  pubspec.yaml
.github/workflows/: brick-test.yml  ci.yml  deploy.yml  release.yml  test.yml
.specify/memory/: constitution.md
android/app/: build.gradle.kts
android/fastlane/: Appfile  Fastfile
app_bloc/error_handler/: pubspec.yaml
app_bloc/gamepad/: pubspec.yaml
app_bloc/log_viewer/: pubspec.yaml
app_bloc/navigation/: pubspec.yaml
app_bloc/theme/: pubspec.yaml
app_form/demo/: pubspec.yaml
app_lib/database/: pubspec.yaml
app_lib/gamepad/: pubspec.yaml
app_lib/locale/: pubspec.yaml
app_lib/log_models/: pubspec.yaml
app_lib/log_parser/: pubspec.yaml
app_lib/logging/: pubspec.yaml
app_lib/provider/: pubspec.yaml
app_lib/theme/: .gitignore  pubspec.yaml
app_plugin/client_info/: README.md
app_plugin/client_info/client_info_windows/windows/: CMakeLists.txt  client_info_plugin.cpp  client_info_plugin.h
app_widget/adaptive/: pubspec.yaml
app_widget/artwork/: pubspec.yaml
app_widget/chart/: pubspec.yaml
app_widget/feedback/: pubspec.yaml
app_widget/log_viewer/: pubspec.yaml
app_widget/web_view/: pubspec.yaml
docs/: BRICKS.md  BRICK_TESTING.md  DEPLOYMENT_SETUP.md  INDEX.md  TESTING.md
docs/prd/: init.md
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/fastlane/: Appfile  Fastfile  Matchfile
lib/: app.dart  destination.dart  main.dart  router.dart
linux/: CMakeLists.txt
windows/: CMakeLists.txt
(+196 files in other folders)
